k9-server/src/main/resources/static/public/examples/risk-first/site.css
@font-face {
	font-family: "gothic";
	src: url('../../fonts/GOTHIC.ttf') format('truetype');
}

@font-face {
	font-family: "gothic-bold";
	src: url('../../fonts/GOTHICB.ttf') format('truetype');
}

@font-face {
	font-family: "gothic-italic";
	src: url('../../fonts/GOTHICI.ttf') format('truetype');
}

@params {
	shape-palette: url(risk-palette);
	link-palette: url(link-palette);	
	align-template-uri:  url(template.xml#align-template);
	cell-template-uri: url(template.xml#cell-template);
}

/*
 * Required so we can process old XML content
 */
renderingInformation,
fromDecoration, 
toDecoration, 
position,
size,
allLinks {
	kite9-type: none;
}

/* Definitions of Kite9 Elements */

action {
	kite9-type: container;
	kite9-template: url(template.xml#action);
	kite9-sizing: minimize;
}

action.left {
	kite9-template: url(template.xml#action-left)	
}

artifact, 
users,
computer, 
interface,
component,
channel-artifact,
internal-model-artifact,
protocol-artifact,
agent-artifact {
	kite9-type: container;
	kite9-margin: 10px;
	kite9-link-inset: 10px;
	kite9-link-gutter: 10px;
	kite9-type: container;
	kite9-layout: vertical;	
	kite9-template: url(template.xml#artifact);
	kite9-padding: 10px; 
	kite9-connection-align: 50%;
	kite9-min-size: 110px 140px;	
}

agent-artifact {
	kite9-template: url(template.xml#agent-artifact);
}

users {
	kite9-template: url(template.xml#users);
}

interface {
	kite9-template: url(template.xml#interface);
}

internal-model-artifact {
	kite9-template: url(template.xml#internal-model-artifact);
}

channel-artifact {
	kite9-template: url(template.xml#channel-artifact);
}

component {
	kite9-template: url(template.xml#component);
}

protocol-artifact {
	kite9-template: url(template.xml#protocol-artifact);
}

mitigated {
	kite9-type: container;
	kite9-template: url(template.xml#mitigated);
}


hidden {
	kite9-type: container;
	kite9-template: url(template.xml#hidden);
}

risk {
	kite9-type: container;
	fill: black;
}

container {
	kite9-type: container;
	kite9-padding: 15px;
	kite9-margin: 15px;
	kite9-template: url(template.xml#container);
}

risk.mitigated {
	kite9-template: url(template.xml#mitigated);
}

risk.attendant {
	kite9-template: url(template.xml#generic) "Attendant" url(redesign/risks/attendant_risk_v2.svg);
}

risk.hidden {
	kite9-template: url(template.xml#hidden);
}

risk.goal {
	kite9-template: url(template.xml#generic) "Goal" url(redesign/risks/goal_v2.svg);
}

risk.invisibility {
	kite9-template: url(template.xml#fixed) "I" url(redesign/risks/invisibility_risk_v2.svg) "Invisibility Risk";
}

risk.feature {
	kite9-template: url(template.xml#fixed) "F" url(redesign/risks/feature_risk_v2.svg) "Feature Risk";
}

risk.communication {
	kite9-template: url(template.xml#fixed) "Co" url(redesign/risks/communication_risk_v2.svg) "Communication Risk";
}

risk.coordination {
	kite9-template: url(template.xml#fixed) "Cr" url(redesign/risks/coordination_risk_v2.svg) "Coordination Risk";
}

risk.complexity {
	kite9-template: url(template.xml#fixed) "Cx" url(redesign/risks/complexity_risk_v2.svg) "Complexity Risk";
}

risk.boundary {
	kite9-template: url(template.xml#fixed) "B" url(redesign/risks/boundary_risk_v2.svg) "Boundary Risk";;
}

risk.agency {
	kite9-template: url(template.xml#fixed) "A" url(redesign/risks/agency_risk_v2.svg) "Agency Risk";;
}

risk.channel {
	kite9-template: url(template.xml#fixed) "CH" url(redesign/risks/channel_risk_v2.svg) "Channel Risk";;
}

risk.protocol {
	kite9-template: url(template.xml#fixed) "Pr" url(redesign/risks/protocol_risk_v2.svg) "Protocol Risk";;
}

risk.trust {
	kite9-template: url(template.xml#fixed) "T" url(redesign/risks/trust_belief_risk_v2.svg) "Trust & Belief Risk";;
}

risk.learning-curve {
	kite9-template: url(template.xml#fixed) "Lc" url(redesign/risks/learning_curve_risk_v2.svg) "Learning Curve Risk";;
}

risk.message {
	kite9-template: url(template.xml#fixed) "M" url(redesign/risks/message_risk_v2.svg) "Message Risk";;
}

risk.internal-model {
	kite9-template: url(template.xml#fixed) "IM" url(redesign/risks/internal_model_risk_v2.svg) "Internal Model Risk";;
}

risk.feature-fit {
	kite9-template: url(template.xml#fixed) "FF" url(redesign/risks/feature_fit_risk_v2.svg) "Feature Fit Risk";;
}

risk.implementation {
	kite9-template: url(template.xml#fixed) "F-Im" url(redesign/risks/feature_implementation_risk_v2.svg) "Implementation Risk";
}

risk.feature-drift {
	kite9-template: url(template.xml#fixed) "F-D" url(redesign/risks/feature_drift_risk_v2.svg) "Feature Drift Risk";;
}

risk.feature-access {
	kite9-template: url(template.xml#fixed) "F-A" url(redesign/risks/feature_access_risk_v2.svg) "Feature Access Risk";
}

risk.regression {
	kite9-template: url(template.xml#fixed) "F-R" url(redesign/risks/feature_regression_risk_v2.svg) "Regression Risk";
}

risk.conceptual-integrity {
	kite9-template: url(template.xml#fixed) "F-Ci" url(redesign/risks/conceptual_integrity_risk_v2.svg) "Conceptual Integrity Risk";
}

risk.codebase {
	kite9-template: url(template.xml#fixed) "Cb" url(redesign/risks/codebase_risk_v2.svg) "Codebase Risk";
}

risk.dependency {
	kite9-template: url(template.xml#fixed) "D" url(redesign/risks/dependency_risk_v2.svg) "Dependency Risk";
}

risk.dead-end {
	kite9-template: url(template.xml#fixed) "De" url(redesign/risks/dead_end_risk_v2.svg) "Dead-End Risk";
}

risk.reliability {
	kite9-template: url(template.xml#fixed) "D-R" url(redesign/risks/dependency_reliability_risk_v2.svg) "Reliability Risk";
}

risk.scarcity {
	kite9-template: url(template.xml#fixed) "D-Sc" url(redesign/risks/dependency_scarcity_risk_v2.svg) "Scarcity Risk";
}

risk.operational {
	kite9-template: url(template.xml#fixed) "Op" url(redesign/risks/operational_risk_v2.svg) "Operational Risk";
}

risk.schedule {
	kite9-template: url(template.xml#fixed) "D-Sh" url(redesign/risks/dependency_schedule_risk_v2.svg) "Schedule Risk";
}
/* ... */

